--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-2">
-          <p>LOGO</p>
+          <img src="img/img/logo.svg" alt="logo discord">
         </div>
         <div class="col-6 text-center">
-          <p>LINK</p>
+          <p>scarica</p>
+          <p>Perchè discord</p>
+          <p>nitro</p>
         </div>
-        <div class="col-2">
-          <p>BUTTONE</p>
+        <div class="col-2 white_box">
+          <p >Accedi</p>
         </div>
       </div>
     </div>
